syntax = "proto3";
package DomainServices.CodebookService.v1;
option csharp_namespace = "DomainServices.CodebookService.Contracts.v1";

import "google/protobuf/wrappers.proto";

message GenericCodebookFullResponse {
	repeated GenericCodebookFullItem Items = 1;

	message GenericCodebookFullItem {
	   int32 Id = 1;
	   string Name = 2;
	   bool IsValid = 3;
	   bool IsDefault = 4;
	   google.protobuf.Int32Value Order = 5;
	   google.protobuf.StringValue Code = 6;
	   google.protobuf.Int32Value MandantId = 7;
	}
}