syntax = "proto3";
package DomainServices.CodebookService.v1;
option csharp_namespace = "DomainServices.CodebookService.Contracts.v1";

import "google/protobuf/wrappers.proto";

message GenericCodebookWithDefaultAndCodeResponse {
	repeated GenericCodebookWithDefaultAndCodeItem Items = 1;

	message GenericCodebookWithDefaultAndCodeItem {
	   int32 Id = 1;
	   string Name = 2;
	   google.protobuf.StringValue Code = 3;
	   bool IsDefault = 4;
	}
}